Behat Launcher Fresh install - Windows
Everything you need to launch and use behat launcher on Windows

--- a/hiptest-publisher.config
+++ b/hiptest-publisher.config
@@ -1,4 +1,4 @@
-token = '395100250118757823031599496159904359771156166145082112811'
+token = 'hiptest token'
 language = behat
 output_directory = './features/BO'
 with_folders = true
