--- a/behat.yml
+++ b/behat.yml
@@ -1,11 +1,15 @@
 # behat.yml
 default:
-    suites:
-        default:
-            contexts:
-                - FeatureContext
+    context:
+       class: FeatureContext
+    formatter:
+        name: pretty
+        parameters:
+                language: fr
     extensions:
-        Behat\MinkExtension:
-            selenium2:
-                wd_host: http://127.0.0.1:4444/wd/hub
-            base_url:  'http://www.france24.com'
+        Behat\MinkExtension\Extension:
+            goutte: ~
+            selenium2: ~
+            base_url:  'http://www.xxx.com'
+            default_session: "selenium2"
+            javascript_session: "selenium2"
